--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="navLeft ">
-            <h1 >TIC TAC TOE</h1>
+            <h1 >TIC-TAC-TOE</h1>
         </div>
         <div class="navRight">
             <ul>
